--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Languages</h2>
             <ul>
                 <li>Dutch - Native language, excellent in reading, writing and speaking.</li>
-                <li>English - Secondary language, fluent in reading, writing and speaking. <em>Anglia Proficiency</em> (ERK level C1) certificate obtained in 2013, with grade 'Distiction'.</li>
+                <li>English - Secondary language, fluent in reading, writing and speaking. <em>Anglia Proficiency</em> (ERK level C1) certificate obtained in 2013, with grade 'Distinction'.</li>
             </ul>
 
             <h2>Programming Languages</h2>
