--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Roboto|Roboto+Condensed" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 <body>
     <div class="page-header">
@@ -49,7 +50,8 @@
         <p>Coming soon :)</p>
     </div>
     <div class="page-footer">
-            <p>© 2019</p>
+            <div class="left"><a href="https://www.linkedin.com/in/florine-de-geus-bb7464180"><i class="fab fa-linkedin" style="font-size:32px"></i></a></div>
+            <div class="right"><p>© 2019</p></div>
     </div>
 </body>
 </html>
